fix filename typo

--- a/content/posts/simplifying-code-with-components.mdx
+++ b/content/posts/simplifying-code-with-components.mdx
@@ -120,7 +120,7 @@ public class InputProvider : MonoBehaviour
 It doesn't seem like much, but small components like this one help separate unrelated logic to make them more composable. 
 Let's refactor the remaining example code.
 
-We'll start by renaming the class and the file to `EntityMovement` and `PlayerMovement.cs`.
+We'll start by renaming the class and the file to `EntityMovement` and `EntityMovement.cs`.
 
 ```cs
 public class EntityMovement : MonoBehaviour
